Pull in the WIL

--- a/peru.yaml
+++ b/peru.yaml
@@ -1,6 +1,7 @@
 imports:
   spdlog: external/spdlog
   taywee-args: external/taywee-args
+  wil: external/wil
 
 git module spdlog:
   url: https://github.com/gabime/spdlog.git
@@ -12,4 +13,9 @@ git module taywee-args:
   rev: 6.2.2
   move:
     args.hxx: include/args.hxx
+  pick: include
+
+git module wil:
+  url: https://github.com/microsoft/wil.git
+  rev: 6de0b3e6c1bad18feaedd2589d452d66e7fc5600
   pick: include
