Fix command syntax

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,8 +6,10 @@ jobs:
       vmImage: vs2017-win2016
     steps:
       - script: |
-          call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Enterprise\\Common7\\Tools\\vsdevcmd" -arch=x64 &&
-          python build.py --cxx cl.exe --test
+          echo Loading VS environment
+          call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Enterprise\\Common7\\Tools\\vsdevcmd" -arch=x64 || exit 1
+          echo Executing build/test script
+          python -u build.py --cxx cl.exe --test || exit 1
         displayName: Build and Run Tests
 
   - job: Linux_GCC
@@ -17,5 +19,14 @@ jobs:
       - script: |
           set -eu
           sudo apt install -y python3-minimal g++-8
-          python3 build.py --cxx g++-8 --test
+          python3 -u build.py --cxx g++-8 --test
         displayName: Build and Run Tests
+
+  - job: macOS
+    pool:
+      vmImage: macOS-10.14
+    steps:
+      - script: |
+          set -eu
+          brew install gcc@8
+          python3 -u build.py --cxx g++-8 --test
