Run smoke tests in CI

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,9 +10,12 @@ jobs:
           call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Enterprise\\Common7\\Tools\\vsdevcmd" -arch=x64 || exit 1
           echo Executing build/test script
           python -u build.py --cxx cl.exe --test --static || exit 1
-        displayName: Build and Run Tests
+        displayName: Build and Run Unit Tests
       - publish: _build/ddslim.exe
         artifact: DDSLiM Executable - Windows
+      - script: |
+          python3 -u test.py --exe _build/ddslim -T:msvc || exit 1
+        displayName: Smoke Tests
 
   - job: Linux_GCC
     pool:
@@ -22,9 +25,13 @@ jobs:
           set -eu
           sudo apt install -y python3-minimal g++-8
           python3 -u build.py --cxx g++-8 --test --static
-        displayName: Build and Run Tests
+        displayName: Build and Run Unit Tests
       - publish: _build/ddslim
         artifact: DDSLiM Executable - Linux
+      - script: |
+          set -eu
+          python3 -u test.py --exe _build/ddslim -T:gcc-8
+        displayName: Smoke Tests
 
   - job: macOS
     pool:
@@ -34,6 +41,10 @@ jobs:
           set -eu
           brew install gcc@8
           python3 -u build.py --cxx g++-8 --test
-        displayName: Build and Run Tests
+        displayName: Build and Run Unit Tests
       - publish: _build/ddslim
         artifact: DDSLiM Executable - macOS
+      - script: |
+          set -eu
+          python3 -u test.py --exe _build/ddslim -T:gcc-8
+        displayName: Smoke Tests
