--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,7 @@
 # Refer: https://aka.ms/yaml
 
 jobs:
-  - job: Windows_MSVC
+  - job: Windows_MSVC_VS2017
     pool:
       vmImage: vs2017-win2016
     steps:
@@ -13,8 +13,22 @@ jobs:
         displayName: Build and Run Unit Tests
       - publish: _build/ddslim.exe
         artifact: DDSLiM Executable - Windows
+      - script: python -u test.py --exe _build/ddslim -T:msvc || exit 1
+        displayName: Smoke Tests
+
+  - job: Windows_MSVC_VS2019
+    pool:
+      vmImage: vs2019-win2019
+    steps:
       - script: |
-          python -u test.py --exe _build/ddslim -T:msvc || exit 1
+          echo Loading VS environment
+          call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\Common7\\Tools\\vsdevcmd" -arch=x64 || exit 1
+          echo Executing build/test script
+          python -u build.py --cxx cl.exe --test --static || exit 1
+        displayName: Build and Run Unit Tests
+      - publish: _build/ddslim.exe
+        artifact: DDSLiM Executable - Windows
+      - script: python -u test.py --exe _build/ddslim -T:msvc || exit 1
         displayName: Smoke Tests
 
   - job: Linux_GCC
