Move the build and test scripts into the `tools/` subdir

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,14 +9,14 @@ jobs:
           echo Loading VS environment
           call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Enterprise\\Common7\\Tools\\vsdevcmd" -arch=x64 || exit 1
           echo Executing build/test script
-          python -u build.py --cxx cl.exe --test --static || exit 1
+          python -u tools/build.py --cxx cl.exe --test --static || exit 1
         displayName: Build and Run Unit Tests
       - publish: _build/ddslim.exe
         artifact: DDSLiM Executable - Windows
       - script: |
           echo Loading VS environment
           call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Enterprise\\Common7\\Tools\\vsdevcmd" -arch=x64 || exit 1
-          python -u test.py --exe _build/ddslim -T:msvc || exit 1
+          python -u tools/test.py --exe _build/ddslim -T:msvc || exit 1
         displayName: Smoke Tests
 
   - job: Windows_MSVC_VS2019
@@ -27,14 +27,14 @@ jobs:
           echo Loading VS environment
           call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\Common7\\Tools\\vsdevcmd" -arch=x64 || exit 1
           echo Executing build/test script
-          python -u build.py --cxx cl.exe --test --static || exit 1
+          python -u tools/build.py --cxx cl.exe --test --static || exit 1
         displayName: Build and Run Unit Tests
       - publish: _build/ddslim.exe
         artifact: DDSLiM Executable - Windows
       - script: |
           echo Loading VS environment
           call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\Common7\\Tools\\vsdevcmd" -arch=x64 || exit 1
-          python -u test.py --exe _build/ddslim -T:msvc || exit 1
+          python -u tools/test.py --exe _build/ddslim -T:msvc || exit 1
         displayName: Smoke Tests
 
   - job: Linux_GCC
@@ -43,11 +43,11 @@ jobs:
     steps:
       - script: sudo apt install -y python3-minimal g++-8
         displayName: Prepare System
-      - script: python3 -u build.py --cxx g++-8 --test --static
+      - script: python3 -u tools/build.py --cxx g++-8 --test --static
         displayName: Build and Run Unit Tests
       - publish: _build/ddslim
         artifact: DDSLiM Executable - Linux
-      - script: python3 -u test.py --exe _build/ddslim -T:gcc-8
+      - script: python3 -u tools/test.py --exe _build/ddslim -T:gcc-8
         displayName: Smoke Tests
 
   - job: macOS
@@ -56,9 +56,9 @@ jobs:
     steps:
       - script: brew install gcc@8
         displayName: Prepare System
-      - script: python3 -u build.py --cxx g++-8 --test
+      - script: python3 -u tools/build.py --cxx g++-8 --test
         displayName: Build and Run Unit Tests
       - publish: _build/ddslim
         artifact: DDSLiM Executable - macOS
-      - script: python3 -u test.py --exe _build/ddslim -T:gcc-8
+      - script: python3 -u tools/test.py --exe _build/ddslim -T:gcc-8
         displayName: Smoke Tests
