--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ jobs:
           python -u tools/build.py --cxx cl.exe --test --static || exit 1
         displayName: Build and Run Unit Tests
       - publish: _build/ddslim.exe
-        artifact: DDSLiM Executable - Windows
+        artifact: DDSLiM Executable - Windows VS2017
       - script: |
           echo Loading VS environment
           call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Enterprise\\Common7\\Tools\\vsdevcmd" -arch=x64 || exit 1
@@ -30,7 +30,7 @@ jobs:
           python -u tools/build.py --cxx cl.exe --test --static || exit 1
         displayName: Build and Run Unit Tests
       - publish: _build/ddslim.exe
-        artifact: DDSLiM Executable - Windows
+        artifact: DDSLiM Executable - Windows VS2019
       - script: |
           echo Loading VS environment
           call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\Common7\\Tools\\vsdevcmd" -arch=x64 || exit 1
