--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,25 +2,23 @@
 
 jobs:
 
-  ## XXX: Windows on Azure cannot build until we have range-v3 supporting compiler
-  ##      available on the system. Just disable for now.
-  # - job: Windows_MSVC_VS2019
-  #   pool:
-  #     vmImage: windows-2019
-  #   steps:
-  #     - script: |
-  #         echo Loading VS environment
-  #         call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\Common7\\Tools\\vsdevcmd" -arch=x64 || exit 1
-  #         echo Executing build/test script
-  #         python -u tools/build.py --cxx cl.exe --test --static || exit 1
-  #       displayName: Build and Run Unit Tests
-  #     - publish: _build/ddslim.exe
-  #       artifact: DDSLiM Executable - Windows VS2019
-  #     - script: |
-  #         echo Loading VS environment
-  #         call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\Common7\\Tools\\vsdevcmd" -arch=x64 || exit 1
-  #         python -u tools/test.py --exe _build/ddslim.exe -T:msvc || exit 1
-  #       displayName: Smoke Tests
+  - job: Windows_MSVC_VS2019
+    pool:
+      vmImage: windows-2019
+    steps:
+      - script: |
+          echo Loading VS environment
+          call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\Common7\\Tools\\vsdevcmd" -arch=x64 || exit 1
+          echo Executing build/test script
+          python -u tools/build.py --cxx cl.exe --test --static || exit 1
+        displayName: Build and Run Unit Tests
+      - publish: _build/ddslim.exe
+        artifact: DDSLiM Executable - Windows VS2019
+      - script: |
+          echo Loading VS environment
+          call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\Common7\\Tools\\vsdevcmd" -arch=x64 || exit 1
+          python -u tools/test.py --exe _build/ddslim.exe -T tools/msvc.dds || exit 1
+        displayName: Smoke Tests
 
   - job: Linux_GCC8
     pool:
