--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,12 +12,12 @@ jobs:
           echo Executing build/test script
           python -u tools/build.py --cxx cl.exe --test --static || exit 1
         displayName: Build and Run Unit Tests
-      - publish: _build/ddslim.exe
-        artifact: DDSLiM Executable - Windows VS2019
+      - publish: _build/dds.exe
+        artifact: DDS Executable - Windows VS2019
       - script: |
           echo Loading VS environment
           call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\Common7\\Tools\\vsdevcmd" -arch=x64 || exit 1
-          python -u tools/test.py --exe _build/ddslim.exe -T tools/msvc.dds || exit 1
+          python -u tools/test.py --exe _build/dds.exe -T tools/msvc.dds || exit 1
         displayName: Smoke Tests
 
   - job: Linux_GCC8
@@ -28,9 +28,9 @@ jobs:
         displayName: Prepare System
       - script: python3 -u tools/build.py --cxx g++-8 --test --static
         displayName: Build and Run Unit Tests
-      - publish: _build/ddslim
-        artifact: DDSLiM Executable - Linux
-      - script: python3 -u tools/test.py --exe _build/ddslim -T:gcc-8
+      - publish: _build/dds
+        artifact: DDS Executable - Linux
+      - script: python3 -u tools/test.py --exe _build/dds -T:gcc-8
         displayName: Smoke Tests
 
   - job: macOS_GCC8
@@ -41,7 +41,7 @@ jobs:
         displayName: Prepare System
       - script: python3 -u tools/build.py --cxx g++-8 --test
         displayName: Build and Run Unit Tests
-      - publish: _build/ddslim
-        artifact: DDSLiM Executable - macOS
-      - script: python3 -u tools/test.py --exe _build/ddslim -T:gcc-8
+      - publish: _build/dds
+        artifact: DDS Executable - macOS
+      - script: python3 -u tools/test.py --exe _build/dds -T:gcc-8
         displayName: Smoke Tests
