--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,7 @@ jobs:
           echo Loading VS environment
           call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\Common7\\Tools\\vsdevcmd" -arch=x64 || exit 1
           echo Executing Build and Tests
+          python -m pip install pytest
           python -u tools/ci.py -B download --cxx cl.exe -T tools\\msvc.dds || exit 1
         displayName: Full CI
       - publish: _build/dds.exe
@@ -19,7 +20,11 @@ jobs:
     pool:
       vmImage: ubuntu-18.04
     steps:
-      - script: sudo apt update -y && sudo apt install -y python3-minimal g++-8
+      - script: |
+          set -eu
+          sudo apt update -y
+          sudo apt install -y python3-minimal g++-8
+          python3 -m pip install pytest
         displayName: Prepare System
       - script: python3 -u tools/ci.py -B download --cxx g++-8 -T tools/gcc-8.dds
         displayName: Full CI
@@ -32,7 +37,10 @@ jobs:
     steps:
       - script: brew install gcc@8
         displayName: Prepare System
-      - script: python3 -u tools/ci.py -B download --cxx g++-8 -T tools/gcc-8.dds
+      - script: |
+          set -eu
+          python3 -m pip install pytest
+          python3 -u tools/ci.py -B download --cxx g++-8 -T tools/gcc-8.dds
         displayName: Build and Run Unit Tests
       - publish: _build/dds
         artifact: DDS Executable - macOS
