--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ jobs:
           echo Loading VS environment
           call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\Common7\\Tools\\vsdevcmd" -arch=x64 || exit 1
           echo Executing Build and Tests
-          python -m pip install pytest
+          python -m pip install pytest pytest-xdist
           python -u tools/ci.py -B download --cxx cl.exe -T tools\\msvc.dds || exit 1
         displayName: Full CI
       - publish: _build/dds.exe
@@ -24,7 +24,7 @@ jobs:
           set -eu
           sudo apt update -y
           sudo apt install -y python3-minimal g++-8
-          python3 -m pip install pytest
+          python3 -m pip install pytest pytest-xdist
         displayName: Prepare System
       - script: python3 -u tools/ci.py -B download --cxx g++-8 -T tools/gcc-8.dds
         displayName: Full CI
@@ -39,7 +39,7 @@ jobs:
         displayName: Prepare System
       - script: |
           set -eu
-          python3 -m pip install pytest
+          python3 -m pip install pytest pytest-xdist
           python3 -u tools/ci.py -B download --cxx g++-8 -T tools/gcc-8.dds
         displayName: Build and Run Unit Tests
       - publish: _build/dds
