--- a/package.jsonc
+++ b/package.jsonc
@@ -12,7 +12,8 @@
         "neo-fun": "0.1.0",
         "semver": "0.2.1",
         "pubgrub": "0.2.0",
-        "json5": "0.1.2"
+        "vob-json5": "0.1.5-dev",
+        "semester": "*"
     },
     "test_driver": "Catch-Main"
 }
