Very rudimentary template rendering, only accesses a small number of resources yet.

--- a/package.jsonc
+++ b/package.jsonc
@@ -13,7 +13,8 @@
         "semver": "0.2.1",
         "pubgrub": "0.2.0",
         "vob-json5": "0.1.5",
-        "vob-semester": "0.1.0"
+        "vob-semester": "0.1.0",
+        "ctre": "2.7.0",
     },
     "test_driver": "Catch-Main"
 }
