--- a/package.jsonc
+++ b/package.jsonc
@@ -1,7 +1,7 @@
 {
     "$schema": "./res/package-schema.json",
     "name": "dds",
-    "version": "0.1.0",
+    "version": "0.1.0-alpha.3",
     "namespace": "dds",
     "depends": {
         "spdlog": "1.4.2",
