Migrate fully to new json5-based packaging

--- a/library.jsonc
+++ b/library.jsonc
@@ -3,13 +3,13 @@
     "name": "dds",
     "uses": [
         "spdlog/spdlog",
-        "Microsoft/wil",
+        "microsoft/wil",
         "range-v3/range-v3",
         "nlohmann/json",
         "neo/sqlite3",
         "neo/fun",
-        "semver/semver",
-        "pubgrub/pubgrub",
+        "vob/semver",
+        "vob/pubgrub",
         "vob/json5",
         "vob/semester",
         "hanickadot/ctre",
