Update MSVC flag

--- a/tools/msvc.jsonc
+++ b/tools/msvc.jsonc
@@ -2,7 +2,7 @@
     "$schema": "../res/toolchain-schema.json",
     "compiler_id": "msvc",
     "flags": [
-        "/experimental:preprocessor", // Required for range-v3
+        "/Zc:preprocessor", // Required for range-v3
         "/DSPDLOG_COMPILED_LIB", // Required to use spdlog as a compiled lib
         "/std:c++latest",
     ],
