--- a/tools/gcc-9-static.jsonc
+++ b/tools/gcc-9-static.jsonc
@@ -1,10 +1,9 @@
 {
     "$schema": "../res/toolchain-schema.json",
     "compiler_id": "gnu",
-    "c_compiler": "gcc9",
-    "cxx_compiler": "g++9",
+    "c_compiler": "gcc-9",
+    "cxx_compiler": "g++-9",
     "flags": [
-        "-DSPDLOG_COMPILED_LIB", // Required to use a compiled spdlog
         "-Werror=return-type",
     ],
     "cxx_flags": [
@@ -12,8 +11,7 @@
         "-std=c++2a",
     ],
     "link_flags": [
-        "-static-libgcc",
-        "-static-libstdc++",
+        "-static",
     ],
     // "debug": true,
     "optimize": true,
