--- a/tools/gcc-9.jsonc
+++ b/tools/gcc-9.jsonc
@@ -3,10 +3,10 @@
     "compiler_id": "gnu",
     "c_compiler": "gcc-9",
     "cxx_compiler": "g++-9",
-    // "cxx_version": "c++17",
     "flags": [
         "-DSPDLOG_COMPILED_LIB", // Required to use a compiled spdlog
         "-Werror=return-type",
+        // "-fsanitize=address",
     ],
     "cxx_flags": [
         "-fconcepts",
@@ -15,6 +15,8 @@
     "link_flags": [
         "-static-libgcc",
         "-static-libstdc++"
+        // "-fsanitize=address",
+        // "-fuse-ld=lld",
     ],
     // "debug": true,
     "optimize": true,
