--- a/tools/gcc-9.next.jsonc
+++ b/tools/gcc-9.next.jsonc
@@ -3,9 +3,8 @@
     "compiler_id": "gnu",
     "c_compiler": "gcc-9",
     "cxx_compiler": "g++-9",
-    "flags": [
-        "-Werror=return-type",
-        // "-fsanitize=address",
+    "warning_flags": [
+        "-Werror",
     ],
     "cxx_flags": [
         "-fconcepts",
@@ -14,10 +13,8 @@
     "link_flags": [
         "-static-libgcc",
         "-static-libstdc++"
-        // "-fsanitize=address",
-        // "-fuse-ld=lld",
     ],
-    "debug": true,
-    // "optimize": true,
+    // "debug": true,
+    "optimize": true,
     "compiler_launcher": "ccache"
 }
