--- a/tools/msvc.next.jsonc
+++ b/tools/msvc.next.jsonc
@@ -2,7 +2,7 @@
     "$schema": "../res/toolchain-schema.json",
     "compiler_id": "msvc",
     "flags": [
-        "/Zc:preprocessor", // Required for range-v3
+        "/Zc:preprocessor",
         "/std:c++latest",
     ],
     "link_flags": [
