--- a/tools/freebsd-gcc-9.jsonc
+++ b/tools/freebsd-gcc-9.jsonc
@@ -3,9 +3,8 @@
     "compiler_id": "gnu",
     "c_compiler": "gcc9",
     "cxx_compiler": "g++9",
-    "flags": [
-        "-DSPDLOG_COMPILED_LIB", // Required to use a compiled spdlog
-        "-Werror=return-type",
+    "warning_flags": [
+        "-Werror",
     ],
     "cxx_flags": [
         "-fconcepts",
