--- a/package.jsonc
+++ b/package.jsonc
@@ -4,7 +4,7 @@
     "version": "0.1.0-alpha.4",
     "namespace": "dds",
     "depends": {
-        "spdlog": "1.4.2",
+        "spdlog": "1.7.0",
         "ms-wil": "2020.3.16",
         "range-v3": "0.10.0",
         "nlohmann-json": "3.7.1",
@@ -15,6 +15,7 @@
         "vob-json5": "0.1.5",
         "vob-semester": "0.2.1",
         "ctre": "2.8.1",
+        "fmt": "^7.0.0"
     },
     "test_driver": "Catch-Main"
 }
