--- a/library.jsonc
+++ b/library.jsonc
@@ -13,5 +13,10 @@
         "vob/json5",
         "vob/semester",
         "hanickadot/ctre",
+        // "neo/io",
+        // Explicit zlib link is required due to linker input order bug.
+        // Can be removed after alpha.5
+        "zlib/zlib",
+        "neo/compress"
     ]
 }
