Cleanup of toolchains, more for different purposes

--- a/tools/gcc-9-static-rel.jsonc
+++ b/tools/gcc-9-static-rel.jsonc
@@ -11,10 +11,7 @@
         "-std=c++2a",
     ],
     "link_flags": [
-        "-static-libgcc",
-        "-static-libstdc++"
+        "-static"
     ],
-    // "debug": true,
-    "optimize": true,
-    "compiler_launcher": "ccache"
+    "optimize": true
 }
