--- a/tools/freebsd-gcc-10.jsonc
+++ b/tools/freebsd-gcc-10.jsonc
@@ -1,14 +1,11 @@
 {
     "$schema": "../res/toolchain-schema.json",
     "compiler_id": "gnu",
-    "c_compiler": "gcc9",
-    "cxx_compiler": "g++9",
+    "c_compiler": "gcc10",
+    "cxx_compiler": "g++10",
+    "cxx_version": "c++20",
     "warning_flags": [
         "-Werror",
-    ],
-    "cxx_flags": [
-        "-fconcepts",
-        "-std=c++2a",
     ],
     "link_flags": [
         "-static-libgcc",
