--- a/package.jsonc
+++ b/package.jsonc
@@ -8,9 +8,10 @@
         "ms-wil@2020.3.16",
         "range-v3@0.11.0",
         "nlohmann-json@3.7.1",
-        "neo-sqlite3@0.2.3",
-        "neo-fun^0.3.2",
+        "neo-sqlite3@0.4.1",
+        "neo-fun~0.5.3",
         "neo-compress^0.1.0",
+        "neo-url~0.1.2",
         "semver@0.2.2",
         "pubgrub@0.2.1",
         "vob-json5@0.1.5",
