--- a/tools/gcc-9-rel-macos.jsonc
+++ b/tools/gcc-9-rel-macos.jsonc
@@ -6,17 +6,18 @@
     "warning_flags": [
         "-Werror",
     ],
+    "flags": [
+        "-I/usr/local/opt/openssl@1.1/include",
+    ],
     "cxx_flags": [
         "-fconcepts",
         "-std=c++2a",
     ],
     "link_flags": [
-        "-static",
-        "-l:libssl.a",
-        "-l:libcrypto.a",
-        "-ldl",
-        // WORKAROUND: https://sourceware.org/legacy-ml/glibc-bugs/2018-09/msg00009.html
-        "-Wl,-u,pthread_mutex_lock,-u,pthread_mutex_unlock,-u,pthread_self",
+        "-static-libgcc",
+        "-static-libstdc++",
+        "/usr/local/opt/openssl@1.1/lib/libssl.a",
+        "/usr/local/opt/openssl@1.1/lib/libcrypto.a",
     ],
     "optimize": true
 }
