Fixes for FreeBSD build

--- a/tools/freebsd-gcc-10.jsonc
+++ b/tools/freebsd-gcc-10.jsonc
@@ -9,7 +9,9 @@
     ],
     "link_flags": [
         "-static-libgcc",
-        "-static-libstdc++"
+        "-static-libstdc++",
+        "-l:libssl.a",
+        "-l:libcrypto.a",
     ],
     "optimize": true
 }
