--- a/package.jsonc
+++ b/package.jsonc
@@ -8,20 +8,22 @@
         "ms-wil@2020.3.16",
         "range-v3@0.11.0",
         "nlohmann-json@3.7.1",
-        "neo-sqlite3@0.4.1",
-        "neo-fun~0.6.0",
-        "neo-compress~0.2.0",
-        "neo-url~0.2.3",
+        "neo-sqlite3@0.5.1",
+        "neo-fun^0.7.0",
+        "neo-buffer^0.5.0",
+        "neo-compress^0.3.0",
+        "neo-url^0.2.4",
         "semver@0.2.2",
         "pubgrub@0.2.1",
-        "vob-json5@0.1.5",
-        "vob-semester@0.2.2",
+        "vob-json5@0.1.6",
+        "vob-semester@0.3.1",
         "ctre@2.8.1",
-        "fmt^7.0.3",
-        "neo-http^0.1.0",
-        "neo-io^0.1.1",
+        "fmt^6.2.1",
+        "neo-http^0.2.0",
+        "neo-io^0.2.0",
         "boost.leaf~0.3.0",
         "magic_enum+0.0.0",
+        "sqlite3^3.33.0"
     ],
     "test_driver": "Catch-Main"
 }
