--- a/tools/Dockerfile.alpine
+++ b/tools/Dockerfile.alpine
@@ -1,12 +1,12 @@
-FROM alpine:3.12.1
+FROM alpine:3.13.1
 
 # Base build dependencies
-RUN apk add "gcc=9.3.0-r2" "g++=9.3.0-r2" make python3 py3-pip \
+RUN apk add "gcc=10.2.1_pre1-r3" "g++=10.2.1_pre1-r3" make python3 py3-pip \
     git openssl-libs-static openssl-dev ccache lld curl python3-dev cmake
 
 # We use version-qualified names for compiler executables
-RUN ln -s $(type -P gcc) /usr/local/bin/gcc-9 && \
-    ln -s $(type -P g++) /usr/local/bin/g++-9
+RUN ln -s $(type -P gcc) /usr/local/bin/gcc-10 && \
+    ln -s $(type -P g++) /usr/local/bin/g++-10
 
 # We want the UID in the container to match the UID on the outside, for minimal
 # fuss with file permissions
