--- a/tools/gcc-10-rel-macos.jsonc
+++ b/tools/gcc-10-rel-macos.jsonc
@@ -1,17 +1,14 @@
 {
     "$schema": "../res/toolchain-schema.json",
     "compiler_id": "gnu",
-    "c_compiler": "gcc-9",
-    "cxx_compiler": "g++-9",
+    "c_compiler": "gcc-10",
+    "cxx_compiler": "g++-10",
+    "cxx_version": "c++20",
     "warning_flags": [
         "-Werror",
     ],
     "flags": [
         "-I/usr/local/opt/openssl@1.1/include",
-    ],
-    "cxx_flags": [
-        "-fconcepts",
-        "-std=c++2a",
     ],
     "link_flags": [
         "-static-libgcc",
