Bringing in new CRS format

--- a/tools/gcc-10-audit.jsonc
+++ b/tools/gcc-10-audit.jsonc
@@ -16,5 +16,8 @@
         "-l:libcrypto.a",
         "-ldl",
     ],
+    "cxx_flags": [
+        "-fconcepts-diagnostics-depth=10"
+    ],
     "debug": true
 }
